# cotc-client

./: .gitignore  README.md
collector/: pyproject.toml
collector/src/collector/: __main__.py  _app.py
collector/src/collector/config/: __init__.py  _config.py  config.json
collector/src/collector/logs/: collector.log.jsonl
collector/src/collector/snapshots/: __init__.py  _snapshots.py
sdk/: pyproject.toml
sdk/src/sdk/: __init__.py  _sdk.py
